[package]
name = "shamir_secret_sharing"
version = "0.1.0"
edition = "2021"

[build]
jobs=12

[[bin]]
name = "shamir_secret_sharing"
path = "src/main.rs"

[lib]
name = "shamir_secret_sharing"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
aes = "0.8.1"
sha2 = "0.10.2"
ctr = "0.9.1"
serde = {version="1.0.137" , features = ["derive"]}
serde_json = "1.0.81"
chrono = "0.4.19"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1