[package]
name = "shamir_secret_sharing"
version = "0.1.0"
edition = "2021"

[build]
jobs=12

[[bin]]
name = "shamir_secret_sharing"
path = "src/main.rs"

[lib]
name = "shamir_secret_sharing"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
sha2 = "0.10.6"
ctr = "0.9.1"
serde = {version="1.0.145" , features = ["derive"]}
serde_json = "1.0.85"
chrono = "0.4.22"
lazy_static = "1.4.0"
fastrand = "1.8.0"

[dependencies.rug]
version = "1.17"
default-features = false
features = ["float","serde"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
panic = 'abort'
codegen-units = 1

[profile.testing]
inherits = "release"
lto = "thin"
codegen-units = 16